// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromotionalArea component renders correctly with mobile check false for tablet 1`] = `
<div
  className="promotional-area"
>
  <div
    className="header-topnav__promo-area--tablet"
  >
    <Styled(Carousel)
      carouselConfig={
        Object {
          "arrow": "small",
          "type": "dark",
        }
      }
      options={
        Object {
          "arrows": false,
          "autoplay": true,
          "autoplaySpeed": 3000,
          "fade": true,
          "infinite": true,
          "responsive": Array [
            Object {
              "breakpoint": NaN,
              "settings": Object {
                "arrows": false,
              },
            },
          ],
          "slidesToScroll": 1,
          "slidesToShow": 1,
          "speed": 500,
        }
      }
    >
      <Styled(Anchor)
        target="_blank"
        to="/static/promo"
      >
        <Styled(RichText)
          dataLocator="global_promoareaimg"
          richTextHtml="<b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 1."
        />
      </Styled(Anchor)>
      <Styled(Anchor)
        target="_blank"
        to="/static/promo2"
      >
        <Styled(RichText)
          dataLocator="global_promoareaimg"
          richTextHtml="<b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 2."
        />
      </Styled(Anchor)>
      <Styled(Anchor)
        target="_blank"
        to="/static/promo3"
      >
        <Styled(RichText)
          dataLocator="global_promoareaimg"
          richTextHtml="<b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 3."
        />
      </Styled(Anchor)>
    </Styled(Carousel)>
  </div>
</div>
`;

exports[`PromotionalArea component renders correctly with mobile check true 1`] = `
<div
  className="promotional-area"
>
  <div
    className="header-topnav__promo-area--mobile"
  >
    <Styled(Carousel)
      carouselConfig={
        Object {
          "arrow": "small",
          "type": "dark",
        }
      }
      options={
        Object {
          "autoplaySpeed": 6000,
          "speed": 500,
        }
      }
    >
      <Styled(Anchor)
        target="_blank"
        to="/static/promo"
      >
        <Styled(RichText)
          dataLocator="global_promoareaimg"
          richTextHtml="<b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 1."
        />
      </Styled(Anchor)>
      <Styled(Anchor)
        target="_blank"
        to="/static/promo2"
      >
        <Styled(RichText)
          dataLocator="global_promoareaimg"
          richTextHtml="<b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 2."
        />
      </Styled(Anchor)>
      <Styled(Anchor)
        target="_blank"
        to="/static/promo3"
      >
        <Styled(RichText)
          dataLocator="global_promoareaimg"
          richTextHtml="<b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 3."
        />
      </Styled(Anchor)>
    </Styled(Carousel)>
  </div>
</div>
`;
